  * Properly set "Options FollowSymLinks" in the apache configuration
    (Closes: #632333)
  * Recommend real ndoutils package instead of the virtual one; no idea why
    there is a virtual one (Closes: #598953)
  * Remove previous maintainers from Uploaders.  Thanks to Hendrik and
    Wolfgang for all their work!
  * Acutally install the documentation
  * Bump standards (no changes needed)

 -- Alexander Reichle-Schmehl <tolimar@debian.org>  Wed, 07 Sep 2011 16:46:15 +0200

nagvis (1:1.4.6-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * Only try to configure local database, if ndoutils is run localy
    (Closes: #595313)

 -- Alexander Reichle-Schmehl <tolimar@debian.org>  Mon, 11 Oct 2010 13:55:28 +0200

nagvis (1:1.4.6-1) unstable; urgency=low

  [ Hendrik Frenzel ]
  * New upstream version (Closes: #533379)
  * Fixed desctiption (Closes: #560705)
  * Patched deprecated ereg to preg_match to get them work with php 5.3+

 -- Hendrik Frenzel <hfrenzel@scunc.net>  Fri, 19 Feb 2010 12:33:48 +0100

nagvis (1:1.4.5-1) UNRELEASED; urgency=low

  * (NOT RELEASED YET) New upstream release
  [ Wolfgang Barth ]
  * New upstream version
  * User uploaded maps now in /var/lib/nagvis/images/maps 
    (1.3.1: /etc/maps) to avoid security problems
  * Cache location nagvis/var ist now /var/cache/nagvis
  * nagios independent htmlbase /nagvis and corresponding apache.conf
    linked to /etc/apache2/conf.d
  * README.backends.Merlin added
  * all images now in /var/lib/nagvis/images

  [ Alexander Wirt ]
  * New upstream version 
  * Add myself to uploaders

  [ Hendrik Frenzel ]
  * fixed include path names in nagvis/ajax_handler.php

  [ Jan Wagner ]
  * Updating standards version to 3.8.3
    - Add README.source

 -- Wolfgang Barth <wob@swobspace.net>  Sat, 28 Nov 2009 09:23:36 +0100

nagvis (1:1.3.1-3) unstable; urgency=low

  * adjust pathnames.dpatch to form_handler.php from correct location, thanks
    Andreas Steinel (Closes: #522296)