@@ -15,8 +15,9 @@ nagvis (1:1.4.6-2) UNRELEASED; urgency=medium
     Wolfgang for all their work!
   * Acutally install the documentation
   * Bump standards (no changes needed)
+  * Add recommended targets to debian/rules
 
- -- Alexander Reichle-Schmehl <tolimar@debian.org>  Wed, 07 Sep 2011 16:46:15 +0200
+ -- Alexander Reichle-Schmehl <tolimar@debian.org>  Wed, 07 Sep 2011 16:47:25 +0200
 
 nagvis (1:1.4.6-1.1) unstable; urgency=low
 
